--- a/index.html
+++ b/index.html
@@ -1,50 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AIPro.cx - Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AIPro.cx – AI Agents for Customer Experience</title>
+  <meta name="description" content="AIPro.cx builds AI agents that handle support, reviews, product content and pricing—faster than any team." />
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #1D1D1F;
-      color: #F2F2F2;
-      font-family: "Poppins", Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
+    :root{
+      --bg:#1D1D1F; --fg:#F2F2F2; --accent:#00C9A7; --muted:#A0A0A0; --card:#222327;
     }
-    h1 {
-      color: #00C9A7;
-      font-size: 3em;
-      margin-bottom: 0.2em;
-    }
-    p {
-      font-size: 1.2em;
-      color: #ccc;
-      margin: 0.2em 0;
-    }
-    .tagline {
-      color: #00C9A7;
-      font-size: 1.4em;
-      margin-top: 0.5em;
-    }
-    .footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9em;
-      color: #888;
-    }
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial;background:var(--bg);color:var(--fg);}
+    .wrap{max-width:980px;margin:0 auto;padding:28px}
+    header{display:flex;align-items:center;justify-content:space-between}
+    .logo{display:flex;gap:10px;align-items:center;font-weight:700;letter-spacing:.3px}
+    .logo-badge{width:28px;height:28px;border-radius:8px;background:var(--accent);display:inline-block}
+    .cta a{color:var(--fg);text-decoration:none;border:1px solid #2e2f34;border-radius:12px;padding:10px 14px;background:#191a1d}
+    .hero{display:grid;gap:12px;margin:56px 0 36px}
+    .title{font-size:40px;line-height:1.1}
+    .title span{color:var(--accent)}
+    .sub{color:var(--muted);font-size:18px}
+    .btns{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap}
+    .btn{background:var(--accent);color:#07201b;border:none;border-radius:12px;padding:12px 18px;font-weight:600;cursor:pointer}
+    .btn.outline{background:transparent;color:var(--fg);border:1px solid #2e2f34}
+    .grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:16px;margin:28px 0}
+    .card{background:var(--card);border:1px solid #2a2b30;border-radius:16px;padding:18px}
+    .card h3{margin:0 0 6px;font-size:18px}
+    .muted{color:var(--muted);font-size:14.5px}
+    .form{margin:24px 0;background:var(--card);border:1px solid #2a2b30;border-radius:16px;padding:18px;display:grid;gap:10px}
+    input,button{font:inherit} input{padding:12px;border-radius:12px;border:1px solid #303136;background:#17181b;color:var(--fg);width:100%}
+    .note{font-size:12.5px;color:var(--muted)}
+    footer{margin:40px 0;color:#8b8b8b;font-size:13px;display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap}
+    @media (max-width:760px){ .title{font-size:30px} .grid{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
-  <h1>AIPro.cx</h1>
-  <p class="tagline">AI Solutions for Smarter Customer Experiences</p>
-  <p>🚀 We’re building something intelligent and exciting.</p>
-  <div class="footer">© 2025 AIPro.cx – All rights reserved.</div>
+  <div class="wrap">
+    <header>
+      <div class="logo"><span class="logo-badge"></span> AIPro.cx</div>
+      <div class="cta"><a href="#join">Join Early Access</a></div>
+    </header>
+
+    <section class="hero">
+      <h1 class="title">Your <span>AI Agents</span> for Smarter Customer Experience</h1>
+      <p class="sub">Reply faster, write better product content, handle reviews, and optimize pricing — all with one AI-powered system.</p>
+      <div class="btns">
+        <a class="btn" href="#join">Get Early Access</a>
+        <a class="btn outline" href="#features">See Features</a>
+      </div>
+    </section>
+
+    <section id="features" class="grid">
+      <div class="card">
+        <h3>🤖 ReplyAgent</h3>
+        <p class="muted">Unified inbox for WhatsApp, Instagram DM, Email, marketplaces. Instant AI replies in your brand tone.</p>
+      </div>
+      <div class="card">
+        <h3>🛍️ ProductWriter</h3>
+        <p class="muted">Platform-optimized titles & descriptions for Shopify, Amazon, Trendyol, Etsy — in seconds.</p>
+      </div>
+      <div class="card">
+        <h3>💬 ReviewResponder</h3>
+        <p class="muted">Answer reviews politely and consistently. Draft → approve → auto-post.</p>
+      </div>
+      <div class="card">
+        <h3>📊 PriceAgent</h3>
+        <p class="muted">Track competitors and get smart price suggestions with simple rules.</p>
+      </div>
+    </section>
+
+    <section id="join" class="form">
+      <h3>Join the waitlist</h3>
+      <!-- Formspree endpoint ile değiştirilecektir -->
+      <form action="https://formspree.io/f/REPLACE_WITH_YOUR_ID" method="POST">
+        <input type="email" name="email" placeholder="your@email.com" required />
+        <input type="text" name="business" placeholder="Business / Store (optional)" />
+        <button class="btn" type="submit">Request Early Access</button>
+      </form>
+      <p class="note">No spam. We’ll only email you about AIPro.cx launch and updates.</p>
+    </section>
+
+    <footer>
+      <div>© 2025 AIPro.cx — All rights reserved.</div>
+      <div>Made with 💡 by AIPro</div>
+    </footer>
+  </div>
 </body>
 </html>
