--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section id="join" class="form">
       <h3>Join the waitlist</h3>
       <!-- Formspree endpoint ile değiştirilecektir -->
-      <form action="https://formspree.io/f/REPLACE_WITH_YOUR_ID" method="POST">
+      <form action="https://formspree.io/f/xvgvezbe" method="POST">
         <input type="email" name="email" placeholder="your@email.com" required />
         <input type="text" name="business" placeholder="Business / Store (optional)" />
         <button class="btn" type="submit">Request Early Access</button>
