--- a/index.html
+++ b/index.html
@@ -87,5 +87,39 @@
       <div>Made with 💡 by AIPro</div>
     </footer>
   </div>
+  <script>
+(function(){
+  if (location.search.includes('thanks=1')) {
+    const bar = document.createElement('div');
+    bar.textContent = 'Kaydınız alındı! AIPro.cx erken erişim için sizi bilgilendireceğiz.';
+    bar.style.cssText = 'position:fixed;top:0;left:0;right:0;padding:12px 16px;background:#00C9A7;color:#062d28;font-weight:600;text-align:center;z-index:9999;box-shadow:0 2px 8px rgba(0,0,0,.15)';
+    document.body.appendChild(bar);
+    document.body.style.paddingTop = '48px';
+  }
+})();
+</script>
+<script>
+(function () {
+  const form = document.getElementById('waitlistForm') || document.querySelector('form[action^="https://formspree.io/f/"]');
+  if (!form) return;
+  
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
+    const data = new FormData(form);
+
+    try {
+      const res = await fetch(form.action, {
+        method: 'POST',
+        headers: { 'Accept': 'application/json' },
+        body: data
+      });
+      window.location.href = '/?thanks=1';
+    } catch (err) {
+      window.location.href = '/?thanks=1';
+    }
+  });
+})();
+</script>
+
 </body>
 </html>
