--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
   });
 })();
 </script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function(){
+    emailjs.init("2NMeCsUTJDHMX10AP");
+  })();
+
+  const form = document.querySelector("form");
+
+  form.addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm('service_w3p9jgc', 'template_nyclgqt', this)
+      .then(function() {
+        alert("✅ Thank you! Your message has been sent and you're on the waitlist!");
+      }, function(error) {
+        alert("❌ Failed to send. Please try again later.");
+        console.log("FAILED...", error);
+      });
+  });
+</script>
 
 </body>
 </html>
