--- a/index.html
+++ b/index.html
@@ -165,6 +165,27 @@
       });
   });
 </script>
+<!-- EmailJS Auto Reply Integration -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function(){
+    emailjs.init("2NMEcSUTJDHMX10AP"); // 👈 EmailJS Public Key’in
+  })();
+
+  const form = document.querySelector("form"); // Formu yakalar
+
+  form.addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm('service_w3p9jgc', 'template_nyclgqt', this)
+      .then(function() {
+        alert("✅ Teşekkürler! Talebiniz başarıyla alındı ve mail gönderildi.");
+      }, function(error) {
+        alert("❌ Mail gönderilemedi, lütfen tekrar deneyin.");
+        console.log("FAILED...", error);
+      });
+  });
+</script>
 
 </body>
 </html>
