--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <h3>Join the waitlist</h3>
   <!-- Formspree endpoint -->
   <form action="https://formspree.io/f/xvgvezbe" method="POST">
-    <input type="email" name="email" placeholder="aiprocx@gmail.com" required />
+    <input type="email" name="email" placeholder="your@email.com" required />
     <input type="hidden" name="_replyto" value="{{email}}" />
     <input type="hidden" name="_subject" value="Welcome to AIPro.cx — You're on the waitlist 🎉" />
     <input type="hidden" name="message" value="Hey 👋 Thanks for joining AIPro.cx! We’ll notify you as soon as early access opens." />
